css/sidebar.css
/*!
 * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Toggle Styles */

#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background-color: rgba(229, 232, 232, 0.32);
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    overflow: hidden;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    min-height:100%;
    margin: 0 auto -3em;
}

.push {
  height: 4em;
}


#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-content {
  position: absolute;
  top: 0;
  width: 250px;
  margin: 0;
  padding: 0;
}

.sidebar-content {
    padding: 20px 25px 10px 25px;
}

.sidebar-content p {
    line-height: 1.2;
    font-size: 16px;
}

.logo {
  margin:30px auto;
  width:120px;
  height:120px;
  transition: background-image 1s ease-in-out;
  background-image:url('../img/logo.png');
  background-repeat: no-repeat;
  background-size: 120px;
}

.logo:hover {
  background-image:url('../img/logo2.png');
  background-repeat: no-repeat;
  background-size: 120px;
}



.side-nav {
  margin-top: 1.25rem;
}

.side-nav li a {
  text-transform: uppercase;
  text-align: center;
  font-size: 16px;
  font-weight: 800;
  letter-spacing: 1px;
  margin-bottom: .3em;
  padding:0;
}

.side-social {
  padding-top: 3em;
}


@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
        background-color: rgba(229, 232, 232, 0.32);
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

